<resources>

    <string name="app_name">XNote</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">XNote</string>
    
    <string name="choose_color">颜色</string>
	<string name="choose_tools">画笔</string>
	<string name="choose_clear">清空</string>
	<string name="choose_backspace">图形</string>
	
	<string name="sure">保存</string>
	<string name="l_text">细</string>
	<string name="r_text">粗</string>
	<string name="title_pensize">画笔粗细:</string>
	<string name="tuya_bg_import">导入</string>
	
	<string name="poster_url">http://d.hiphotos.bdimg.com/album/w%3D1600%3Bq%3D90/sign=1d0615fc3887e9504217f76a20086832/80cb39dbb6fd52667b10262ba918972bd40736d1.jpg</string>
	
</resources>